--- a/configs/waybar/style.css
+++ b/configs/waybar/style.css
@@ -5,8 +5,9 @@
 @define-color hover @cursor;
 
 * {
-    font-size: 15px;
-    font-family: "CodeNewRoman Nerd Font Propo";
+    font-size: 14px;
+    font-family: "CaskaydiaCove Nerd Font", "Font Awesome 6 Free",
+        "Font Awesome 6 Free Solid";
     padding: 1px;
 }
 
@@ -18,7 +19,7 @@ window#waybar {
 
 .modules-left {
     padding: 7px;
-    margin: 5 0 0 20;
+    margin: 5 0 0 9;
     border-radius: 10px;
     background: alpha(@background, 0.6);
     box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.6);
@@ -34,7 +35,7 @@ window#waybar {
 
 .modules-right {
     padding: 7px;
-    margin: 5 20 0 0;
+    margin: 5 9 0 0;
     border-radius: 10px;
     background: alpha(@background, 0.6);
     box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.6);
@@ -148,5 +149,10 @@ tooltip {
 }
 
 #pulseaudio {
+    color: @principal;
+    padding: 0px 5px;
+}
+
+#battery {
     color: @principal;
 }
