--- a/configs/waybar/style.css
+++ b/configs/waybar/style.css
@@ -26,7 +26,7 @@ window#waybar {
 }
 
 .modules-center {
-    padding: 7px;
+    padding: 0 50px 0 50px;
     margin: 5 0 0 0;
     border-radius: 10px;
     background: alpha(@background, 0.6);
